--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ stevedore==1.31.0
 tabledata==0.9.1
 tensorboard==1.13.1
 tensorflow-estimator==1.13.0
-tensorflow-gpu==1.13.1
+tensorflow==1.13.1
 termcolor==1.1.0
 tqdm==4.42.0
 typepy==0.6.4
